:sparkles: BIG structure updates
